# nexish

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  tag.yml
scripts/: install.sh  uninstall.sh
src/: main.rs
