[package]
name = "nexish"
version = "0.1.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "A simple, experimental shell written in Rust for learning purpose."
license = "MIT"
repository = "https://github.com/santoshxshrestha/nexish"
homepage = "https://github.com/santoshxshrestha/nexish"
documentation = "https://github.com/santoshxshrestha/nexish#readme"
readme = "README.md"

[dependencies]
shell-words = "1.1.0"
dirs = "6.0.0"
nix = {version = "0.30.1", features = ["user"]}
users = "0.11.0"
chrono = "0.4.41"
