[package]
name = "nexish"
version = "0.1.2"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "A simple, experimental shell written in Rust for learning purpose."
license = "MIT"
repository = "https://github.com/santoshxshrestha/nexish"
homepage = "https://github.com/santoshxshrestha/nexish"
documentation = "https://github.com/santoshxshrestha/nexish#readme"
readme = "README.md"

[dependencies]
shell-words = "1.1.0"
dirs = "6.0.0"
whoami = "1.6.0"
chrono = "0.4.41"
os_info = "3.11.0"
git2 = "0.20.2"
reedline = "0.40.0"
nu-ansi-term = "0.50.1"
